<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/item_edittext_email" />

        <include layout="@layout/item_edittext_password" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_firstname"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_lastname"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_mobilenumber"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinnerGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/gender"
            android:prompt="@string/text_selectgender" />

    </android.support.v7.widget.LinearLayoutCompat>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>